--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   app:
     container_name: app-server
-    image: nextcloud:fpm
+    image: moodlehq/moodle-php-apache:7.3
     stdin_open: true
     tty: true
     restart: always
@@ -39,4 +39,9 @@ volumes:
   document_data:
   document_log:
   app_data:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/j_dage01/Development/Learnweb/docker-onlyoffice-moodle/moodle/
+      o: bind
   mysql_data:
