--- a/nginx.conf
+++ b/nginx.conf
@@ -106,6 +106,24 @@ http {
                 proxy_set_header X-Forwarded-Proto $the_scheme;
         }
 
+	location ~* ^/moodle/ {
+		rewrite /moodle/(.*) /moodle/$1  break;
+                proxy_pass http://app-server;
+                proxy_redirect     off;
+
+                client_max_body_size 100m;
+
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection "upgrade";
+
+                proxy_set_header Host $http_host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Host $the_host/moodle;
+                proxy_set_header X-Forwarded-Proto $the_scheme;
+        }
+
         location ~ \.php(?:$|/) {
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
             include fastcgi_params;
